@@ -1,4 +1,5 @@
 Added statistics.
+Fixed a bug that trapped player in ceiling after falling in cave levels in auto-run mode.
 
 *****
 
